5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1594_1803.log
== TEST (2019-04-15 23:50:42) 
-- CODE:
numero = int(input("Conta: "))

num1 = numero // 10000
num2 = numero // 1000 % 10
num3 = numero // 100 % 10
num4 = num % 10

print (num1, " ", num2, " ",num3, " ", num4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num4 = num % 10
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:51:16) 
-- CODE:
numero = int(input("Conta: "))

num1 = numero // 10000
num2 = numero // 1000 % 10
num3 = numero // 100 % 10
num4 = numero % 10

print (num1, " ", num2, " ",num3, " ", num4)
-- OUTPUT:
0   2   0   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:52:16) 
-- CODE:
numero = int(input("Conta: "))

num1 = numero // 10000
num2 = numero // 10000 % 1000
num3 = numero // 1000 % 100
num4 = numero % 10

print (num1, " ", num2, " ",num3, " ", num4)
-- OUTPUT:
0   0   2   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:53:10) 
-- CODE:
numero = int(input("Conta: "))

num1 = numero // 10000
num2 = numero // 10000 % 100
num3 = numero // 1000 % 10
num4 = numero % 10

print (num1, " ", num2, " ",num3, " ", num4)
-- OUTPUT:
0   0   2   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:54:49) 
-- CODE:
numero = int(input("Conta: "))

num1 = numero // 1000
num2 = numero // 100 % 10
num3 = numero // 10 % 10
num4 = numero % 10

print (num1, " ", num2, " ",num3, " ", num4)
-- OUTPUT:
2   0   0   0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:00:02) 
-- CODE:
numero = int(input("Conta: "))

#isolar numeros
num1 = numero // 1000
num2 = numero // 100 % 10
num3 = numero // 10 % 10
num4 = numero % 10

#contar numeros
cont1 = num4 * 2
cont2 = num3 * 3
cont3 = num2 * 4
cont4 = num1 * 5

#somar e dividir por 11
digito = (cont1 + cont2 + cont3 + cont4) % 11

print (digito)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:00:18) 
-- CODE:
numero = int(input("Conta: "))

#isolar numeros
num1 = numero // 1000
num2 = numero // 100 % 10
num3 = numero // 10 % 10
num4 = numero % 10

#contar numeros
cont1 = num4 * 2
cont2 = num3 * 3
cont3 = num2 * 4
cont4 = num1 * 5

#somar e dividir por 11
digito = (cont1 + cont2 + cont3 + cont4) % 11

print (digito)
-- EXECUTION TIME:
0.180724
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
